--- a/resourses/css/style.css
+++ b/resourses/css/style.css
@@ -234,12 +234,13 @@ i {
 }
 
 .price {
+    letter-spacing: 0.5px;
     position: absolute;
     right: 0;
     color: #e67e22;
     font-weight: 400;
-    -webkit-transition: letter-spacing .3s, border-bottom .3s;
-    transition: letter-spacing .3s, border-bottom .3s;
+    transition: letter-spacing 0.3s, border-bottom 0.3s;
+    -webkit-transition: letter-spacing 0.3s, border-bottom 0.3s;
 }
 
 /*GALERY STYLE*/
