--- a/resourses/css/style.css
+++ b/resourses/css/style.css
@@ -1,7 +1,7 @@
-
 /* ----------------------------------------------- */
 /* BASIC SETUP */
 /* ----------------------------------------------- */
+
 
 * {
     margin: 0;
@@ -12,7 +12,7 @@
 html, body {
     background-color: #fff;
     color: #000;
-    font-family: 'Lato', 'Arial', sans-serif;
+    font-family: 'Raleway', 'Arial', sans-serif;
     font-weight: 300;
     font-size: 20px;
     text-rendering: optimizeLegibility;
@@ -27,6 +27,9 @@ html, body {
 
 
 /* color: #e67e22 */
+
+
+
 
 .row {
     max-width: 1140px;
