link ka telefonu dodat, responsiv hero izmenjen

--- a/resourses/css/media queries.css
+++ b/resourses/css/media queries.css
@@ -73,8 +73,12 @@
     
     .hero_textbox {
         left: 5%;
-        top: 65%;
-        height: 230px;
+        top: auto;
+        bottom: 5%
+    }
+    
+    h1 {
+        font-size: 26px;
     }
     
     
@@ -100,7 +104,7 @@
         font-size: 18px;
     }
     .hero_textbox {
-        top: 55%;
+        bottom: 5%;
     }
 }
 
